// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BulkSelect should render correctly - no data 1`] = `
<div>
  <div
    class="pf-c-check pf-m-standalone ins-c-bulk-select"
  >
    <input
      aria-invalid="false"
      aria-label="Select all"
      class="pf-c-check__input"
      data-ouia-component-id="OUIA-Generated-Checkbox-1"
      data-ouia-component-type="PF4/Checkbox"
      data-ouia-safe="true"
      id="undefined-checkbox"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`BulkSelect should render correctly - null checked 1`] = `
<div>
  <div
    class="pf-c-dropdown ins-c-bulk-select"
    data-ouia-component-id="OUIA-Generated-RHI/BulkSelect-4"
    data-ouia-component-type="PF4/Dropdown"
    data-ouia-safe="true"
  >
    <div
      class="pf-c-dropdown__toggle pf-m-split-button"
    >
      <label
        class="pf-c-dropdown__toggle-check"
        for="toggle-checkbox"
      >
        <input
          aria-invalid="false"
          aria-label="Select all"
          data-ouia-component-id="OUIA-Generated-RHI/BulkSelect-4"
          data-ouia-component-type="PF4/DropdownToggleCheckbox"
          data-ouia-safe="true"
          id="toggle-checkbox"
          type="checkbox"
        />
        
      </label>
      <button
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Select"
        class="pf-c-dropdown__toggle-button"
        data-ouia-component-id="OUIA-Generated-RHI/BulkSelect-4"
        data-ouia-component-type="PF4/DropdownToggle"
        data-ouia-safe="true"
        id="pf-dropdown-toggle-id-2"
        type="button"
      >
        <span
          class=""
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`BulkSelect should render correctly 1`] = `
<div>
  <div
    class="pf-c-dropdown ins-c-bulk-select"
    data-ouia-component-id="OUIA-Generated-RHI/BulkSelect-2"
    data-ouia-component-type="PF4/Dropdown"
    data-ouia-safe="true"
  >
    <div
      class="pf-c-dropdown__toggle pf-m-split-button"
    >
      <label
        class="pf-c-dropdown__toggle-check"
        for="some-id-toggle-checkbox"
      >
        <input
          aria-invalid="false"
          aria-label="Select all"
          data-ouia-component-id="OUIA-Generated-RHI/BulkSelect-2"
          data-ouia-component-type="PF4/DropdownToggleCheckbox"
          data-ouia-safe="true"
          id="some-id-toggle-checkbox"
          type="checkbox"
        />
        <span
          aria-hidden="true"
          class="pf-c-dropdown__toggle-text"
          id="some-id-toggle-checkbox-text"
        >
          30 selected
        </span>
      </label>
      <button
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Select"
        class="pf-c-dropdown__toggle-button"
        data-ouia-component-id="OUIA-Generated-RHI/BulkSelect-2"
        data-ouia-component-type="PF4/DropdownToggle"
        data-ouia-safe="true"
        id="pf-dropdown-toggle-id-0"
        type="button"
      >
        <span
          class=""
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`BulkSelect should render correctly 2`] = `
<div>
  <div
    class="pf-c-dropdown ins-c-bulk-select"
    data-ouia-component-id="OUIA-Generated-RHI/BulkSelect-3"
    data-ouia-component-type="PF4/Dropdown"
    data-ouia-safe="true"
  >
    <div
      class="pf-c-dropdown__toggle pf-m-split-button"
    >
      <label
        class="pf-c-dropdown__toggle-check"
        for="toggle-checkbox"
      >
        <input
          aria-invalid="false"
          aria-label="Select all"
          data-ouia-component-id="OUIA-Generated-RHI/BulkSelect-3"
          data-ouia-component-type="PF4/DropdownToggleCheckbox"
          data-ouia-safe="true"
          id="toggle-checkbox"
          type="checkbox"
        />
        
      </label>
      <button
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Select"
        class="pf-c-dropdown__toggle-button"
        data-ouia-component-id="OUIA-Generated-RHI/BulkSelect-3"
        data-ouia-component-type="PF4/DropdownToggle"
        data-ouia-safe="true"
        id="pf-dropdown-toggle-id-1"
        type="button"
      >
        <span
          class=""
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`BulkSelect should render custom props 1`] = `
<div>
  <div
    class="pf-c-dropdown ins-c-bulk-select"
    data-ouia-component-id="OUIA-Generated-RHI/BulkSelect-5"
    data-ouia-component-type="PF4/Dropdown"
    data-ouia-safe="true"
  >
    <div
      class="pf-c-dropdown__toggle pf-m-split-button"
    >
      <label
        class="pf-c-dropdown__toggle-check"
        for="toggle-checkbox"
      >
        <input
          aria-invalid="false"
          aria-label="Select all"
          data-ouia-component-id="OUIA-Generated-RHI/BulkSelect-5"
          data-ouia-component-type="PF4/DropdownToggleCheckbox"
          data-ouia-safe="true"
          id="toggle-checkbox"
          type="checkbox"
        />
        
      </label>
      <button
        aria-expanded="false"
        aria-haspopup="true"
        aria-label="Select"
        class="pf-c-dropdown__toggle-button"
        data-ouia-component-id="OUIA-Generated-RHI/BulkSelect-5"
        data-ouia-component-type="PF4/DropdownToggle"
        data-ouia-safe="true"
        id="pf-dropdown-toggle-id-3"
        type="button"
      >
        <span
          class=""
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;
